--- a/relatoriobl.html
+++ b/relatoriobl.html
@@ -62,29 +62,45 @@ body{
   margin:60px auto;
   box-shadow:0 10px 30px rgba(0,0,0,.12);
 }
-.checkbox-group{display:flex;flex-wrap:wrap;gap:12px}
-.checkbox-group label{background:#eee;padding:7px 12px;border-radius:8px}
-textarea{width:100%;height:220px;font-family:monospace}
-
+textarea{
+  width:100%;
+  height:200px;
+  margin-top:15px;
+  font-family:monospace;
+}
+.checkbox-group{
+  display:flex;
+  flex-wrap:wrap;
+  gap:12px;
+}
+.checkbox-group label{
+  background:#eee;
+  padding:7px 12px;
+  border-radius:8px;
+}
 #adminBtn{
   position:fixed;
-  bottom:20px;
-  right:20px;
-  width:48px;
-  height:48px;
+  bottom:18px;
+  right:18px;
+  width:46px;
+  height:46px;
   border-radius:50%;
   border:none;
   background:#ff9800;
-  font-size:22px;
+  color:#000;
+  font-size:20px;
   font-weight:700;
+  cursor:pointer;
   z-index:3000;
+  box-shadow:0 6px 16px rgba(0,0,0,.25);
 }
+#adminBtn:hover{background:#ffcc00}
 #adminPanel{
   display:none;
-  margin-top:20px;
   background:#f1f1f1;
   padding:18px;
   border-radius:14px;
+  margin-top:20px;
 }
 </style>
 </head>
@@ -99,14 +115,30 @@ textarea{width:100%;height:220px;font-family:monospace}
       <div class="logo">Deboxe Customs</div>
     </div>
 
+    <button class="btn btn-outline-light d-md-none" data-bs-toggle="collapse" data-bs-target="#menuMobile">
+      <i class="fa-solid fa-bars"></i>
+    </button>
+
     <nav class="d-none d-md-flex align-items-center nav-links">
       <a href="index.html">Início</a>
       <a href="tabela.html">Preços</a>
       <a href="funcionarios.html">Funcionários</a>
-      <a href="#" class="discord-btn">
+      <a href="https://discord.gg/Z72tjMRmUX" class="discord-btn">
         <i class="fa-brands fa-discord"></i> Discord
       </a>
     </nav>
+  </div>
+
+  <div class="collapse bg-dark d-md-none" id="menuMobile">
+    <div class="p-4 text-center">
+      <a class="d-block text-white py-2" href="index.html">Início</a>
+      <a class="d-block text-white py-2" href="tabela.html">Preços</a>
+      <a class="d-block text-white py-2" href="funcionarios.html">Funcionários</a>
+      <a class="d-block text-warning py-2 fw-bold" href="relatorio.html">Relatório</a>
+      <a class="d-block text-white py-2" href="https://discord.gg/Z72tjMRmUX">
+        <i class="fa-brands fa-discord"></i> Discord
+      </a>
+    </div>
   </div>
 </header>
 
@@ -116,17 +148,21 @@ textarea{width:100%;height:220px;font-family:monospace}
 
 <label>Gerente Responsável</label>
 <input id="nome" class="form-control"
-oninput="this.value=this.value.replace(/[^A-Za-zÀ-ÿ\s]/g,'')">
+       placeholder="Somente letras"
+       oninput="validarNome(this)"
+       maxlength="40">
 
-<label>ID Responsável (Gerente)</label>
+<label>ID Responsável</label>
 <input id="idM" class="form-control"
-inputmode="numeric"
-oninput="this.value=this.value.replace(/[^0-9]/g,'')">
+       placeholder="Somente números"
+       oninput="validarNumero(this)"
+       maxlength="10">
 
-<label>ID Mecânico / Funcionário</label>
+<label>ID Comprador / Funcionário</label>
 <input id="idC" class="form-control"
-inputmode="numeric"
-oninput="this.value=this.value.replace(/[^0-9]/g,'')">
+       placeholder="Somente números"
+       oninput="validarNumero(this)"
+       maxlength="10">
 
 <label class="mt-3">Itens</label>
 <div id="itens" class="checkbox-group mt-2"></div>
@@ -135,12 +171,13 @@ oninput="this.value=this.value.replace(/[^0-9]/g,'')">
 <button class="btn btn-primary mt-2 w-100" onclick="enviarDiscord()">
 <i class="fa-brands fa-discord"></i> Enviar para o Discord
 </button>
+<button class="btn btn-danger mt-2 w-100" onclick="limpar()">Limpar</button>
 
 <textarea id="saida" readonly></textarea>
 
 <div id="adminPanel">
-  <h5>Área Administrativa</h5>
-  <input class="form-control mt-2" placeholder="Painel restrito">
+  <h5>Administração do Estoque</h5>
+  <input class="form-control mt-2" placeholder="Área restrita">
 </div>
 </div>
 
@@ -150,12 +187,9 @@ oninput="this.value=this.value.replace(/[^0-9]/g,'')">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
 import { getFirestore, collection, getDocs, doc, updateDoc } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
 
-/* ===== CONFIG ===== */
-const DISCORD_WEBHOOK = "SEU_WEBHOOK_AQUI";
-const GERENTES = ["52853","48824","55586","53730"];
+const DISCORD_WEBHOOK = "https://discord.com/api/webhooks/1463030474879533253/JWef5V8rb0fVTnAV8E6vjKPa5b7mbuV5KfgBlYASbhBDd-WQA0MJ3Gwgy-sNWqttMDIC";
 const SENHA_ADMIN = "gerencia456";
 
-/* ===== FIREBASE ===== */
 const app = initializeApp({
   apiKey:"AIzaSyD2zieCD4d-_olcWE6oOOqlepyxWvLGhyI",
   authDomain:"centralrace-c4ad0.firebaseapp.com",
@@ -163,100 +197,163 @@ const app = initializeApp({
 });
 const db = getFirestore(app);
 
-/* ===== VAR ===== */
 const container = document.getElementById("itens");
 const saida = document.getElementById("saida");
-let estoque={}, itensSelecionados=[], relatorioGerado=false;
+const adminPanel = document.getElementById("adminPanel");
 
-/* ===== SEGURANÇA ===== */
-function ehGerente(){
-  return GERENTES.includes(idM.value.trim());
-}
+let estoque = {};
+let relatorioGerado = false;
+let itensSelecionados = [];
 
-function validarNome(){
-  return /^[A-Za-zÀ-ÿ\s]{3,}$/.test(nome.value.trim());
-}
-
-function bloquearTudo(){
-  document.querySelectorAll("input,button").forEach(e=>e.disabled=true);
-  saida.value="🚫 ACESSO RESTRITO\nSomente gerentes autorizados.";
-}
-
-function liberarTudo(){
-  document.querySelectorAll("input,button").forEach(e=>e.disabled=false);
-  saida.value="";
-}
-
-idM.addEventListener("input",()=>{
-  ehGerente() ? liberarTudo() : bloquearTudo();
-});
-
-/* ===== ESTOQUE ===== */
 async function carregarEstoque(){
   container.innerHTML="";
+  estoque={};
   const snap = await getDocs(collection(db,"estoque"));
-  snap.forEach(d=>{
-    estoque[d.id]=d.data();
-    const l=document.createElement("label");
-    const c=document.createElement("input");
-    c.type="checkbox"; c.value=d.id;
-    l.appendChild(c);
-    l.append(` ${d.id} | Qtd: ${d.data().qtd}`);
-    container.appendChild(l);
-  });
+  snap.forEach(d=>estoque[d.id]=d.data());
+
+  for(const item in estoque){
+    const label=document.createElement("label");
+    const cb=document.createElement("input");
+    cb.type="checkbox";
+    cb.value=item;
+    label.appendChild(cb);
+    label.append(` ${item} | Qtd: ${estoque[item].qtd}`);
+    container.appendChild(label);
+  }
 }
 
-/* ===== RELATÓRIO ===== */
-window.gerarRelatorio=async()=>{
-  if(!ehGerente()) return alert("🚫 Apenas gerentes.");
-  if(!validarNome()) return alert("Nome inválido.");
+async function gerarRelatorio(){
+  const nome = document.getElementById("nome").value.trim();
+  const idM = document.getElementById("idM").value.trim();
+  const idC = document.getElementById("idC").value.trim();
+
+  if(!nome || !idM || !idC){
+    return alert("Preencha nome e IDs corretamente");
+  }
+
+  if(!/^[A-Za-zÀ-ÿ\s]+$/.test(nome)){
+    return alert("O nome deve conter apenas letras");
+  }
+
+  if(!/^\d+$/.test(idM) || !/^\d+$/.test(idC)){
+    return alert("IDs devem conter apenas números");
+  }
 
   const sel=[...document.querySelectorAll("input[type=checkbox]:checked")].map(i=>i.value);
   if(!sel.length) return alert("Selecione itens");
 
   let total=0;
-  let txt=`🛠️ RELATÓRIO DO BAÚ\n\n👤 Gerente: ${nome.value}\n🆔 ID: ${idM.value}\n🧾 Mecânico: ${idC.value}\n\n`;
-  sel.forEach(i=>{ total+=estoque[i].preco; txt+=`${i} - R$ ${estoque[i].preco}\n`; });
-  txt+=`\nTOTAL: R$ ${total}`;
+  let texto=`🛠️ RELATÓRIO DO BAÚ\n\nGerente: ${nome}\nID Responsável: ${idM}\nID Comprador: ${idC}\n\n`;
 
-  saida.value=txt;
-  itensSelecionados=sel;
-  relatorioGerado=true;
-};
+  for(const item of sel){
+    total+=estoque[item].preco;
+    texto+=`${item} - R$ ${estoque[item].preco}\n`;
+  }
 
-window.enviarDiscord=async()=>{
-  if(!ehGerente()) return alert("🚫 Apenas gerentes.");
+  texto+=`\nTOTAL: R$ ${total}`;
+  saida.value=texto;
+
+  itensSelecionados = sel;
+  relatorioGerado = true;
+}
+
+async function enviarDiscord(){
   if(!relatorioGerado) return alert("Gere o relatório primeiro");
 
   await fetch(DISCORD_WEBHOOK,{
     method:"POST",
     headers:{ "Content-Type":"application/json" },
     body:JSON.stringify({
-      embeds:[{title:"🛠️ Relatório do Baú",description:"```"+saida.value+"```",color:0xe10600}]
+      username:"Deboxe Relatórios",
+      embeds:[{
+        title:"🛠️ Relatório do Baú",
+        description:"```"+saida.value+"```",
+        color:0xe10600
+      }]
     })
   });
 
-  for(const i of itensSelecionados){
-    await updateDoc(doc(db,"estoque",i),{qtd:estoque[i].qtd-1});
+  for(const item of itensSelecionados){
+    await updateDoc(doc(db,"estoque",item),{
+      qtd: estoque[item].qtd - 1
+    });
   }
 
-  alert("Relatório enviado!");
+  alert("Relatório enviado e estoque atualizado!");
   relatorioGerado=false;
+  itensSelecionados=[];
   carregarEstoque();
+}
+
+function limpar(){
+  document.querySelectorAll("input").forEach(i=>{
+    if(i.type==="checkbox") i.checked=false;
+    else i.value="";
+  });
+  saida.value="";
+  relatorioGerado=false;
+  itensSelecionados=[];
+}
+
+document.getElementById("adminBtn").onclick=()=>{
+  const senha = prompt("Senha de administração:");
+  if(senha===SENHA_ADMIN){
+    adminPanel.style.display =
+      adminPanel.style.display==="block"?"none":"block";
+  }else{
+    alert("Senha incorreta");
+  }
 };
 
-/* ===== ADMIN ===== */
-adminBtn.onclick=()=>{
-  const s=prompt("Senha admin:");
-  if(s===SENHA_ADMIN){
-    adminPanel.style.display=adminPanel.style.display==="block"?"none":"block";
-  }else alert("Senha incorreta");
-};
+window.gerarRelatorio=gerarRelatorio;
+window.enviarDiscord=enviarDiscord;
+window.limpar=limpar;
 
-/* ===== INIT ===== */
-bloquearTudo();
 carregarEstoque();
 </script>
 
+<script>
+// ===== VALIDAÇÕES DE SEGURANÇA =====
+
+// Nome: apenas letras e espaço
+function validarNome(input){
+  input.value = input.value
+    .replace(/[^a-zA-ZÀ-ÿ\s]/g, "");
+}
+
+// Número: apenas dígitos
+function validarNumero(input){
+  input.value = input.value
+    .replace(/\D/g, "");
+}
+
+// ===== BLOQUEIO DE COPIAR - DESKTOP + MOBILE =====
+const isMobile = /Mobi|Android|iPhone|iPad/i.test(navigator.userAgent);
+
+// Bloqueio de clique direito
+document.addEventListener("contextmenu", e => e.preventDefault());
+
+// Bloqueio de teclas desktop
+document.addEventListener("keydown", function(e){
+  if (!isMobile) {
+    if (e.key === "F12") e.preventDefault();
+    if (e.ctrlKey && e.shiftKey && ["I","J","C"].includes(e.key.toUpperCase())) e.preventDefault();
+    if (e.ctrlKey && ["u","s","c"].includes(e.key.toLowerCase())) e.preventDefault();
+  }
+});
+
+// Bloqueio de copiar em mobile
+if (isMobile) {
+  document.body.addEventListener("selectstart", e => e.preventDefault());
+  document.body.addEventListener("touchstart", function(e){
+    if (e.target.tagName === "IMG") e.preventDefault();
+  }, {passive:false});
+  document.body.addEventListener("touchend", e => {
+    window.getSelection().removeAllRanges();
+  });
+}
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
